--- a/templates/school/admin_teacher.html
+++ b/templates/school/admin_teacher.html
@@ -6,6 +6,8 @@
 
 
 
+<!DOCTYPE html>
+<html lang="en">
 <head>
   <meta charset="utf-8">
 
@@ -132,6 +134,6 @@
 
   
 </body>
-
+</html>
 
 {% endblock content %}
