--- a/templates/school/admin_teacher.html
+++ b/templates/school/admin_teacher.html
@@ -1,22 +1,14 @@
 {% extends 'school/adminbase.html' %}
 
-
-
 {% block content %}
-
-
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="utf-8">
-
-
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
-  <link href="http://netdna.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" rel="stylesheet">
-  <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet">
-  <script src="http://netdna.bootstrapcdn.com/bootstrap/4.0.0-beta/js/bootstrap.min.js"></script>
+  <title>Your Page Title</title>
+  <link rel="stylesheet" href="http://netdna.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
   <style>
     a:link {
       text-decoration: none;
@@ -45,7 +37,6 @@
     .bg-c-pink {
       background: linear-gradient(45deg, #FF5370, #ff869a);
     }
-
 
     .card {
       border-radius: 5px;
@@ -76,7 +67,6 @@
 </head>
 
 <body>
-
   <div class="container">
     <div class="row">
       <div class="col-md-4 col-xl-3">
@@ -87,7 +77,6 @@
             </a>
             <br>
             <h2 class="text-right"><i class="fas fa-eye f-left"></i></h2>
-
           </div>
         </div>
       </div>
@@ -128,12 +117,7 @@
         </div>
       </div>
     </div>
-    <br><br><br><br><br><br><br><br>
   </div>
-
-
-  
 </body>
 </html>
-
 {% endblock content %}
