--- a/templates/school/admin_student.html
+++ b/templates/school/admin_student.html
@@ -69,6 +69,11 @@
     .f-right {
       float: right;
     }
+    .row{
+  display: grid;
+  grid-template-columns: repeat(3,1fr);
+  gap: 10px;
+    }
   </style>
 </head>
 
