--- a/templates/school/admin_student.html
+++ b/templates/school/admin_student.html
@@ -69,18 +69,14 @@
     .f-right {
       float: right;
     }
-    .row{
-  display: grid;
-  grid-template-columns: repeat(3,1fr);
-  gap: 10px;
-    }
   </style>
 </head>
 
 <body>
+  <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet">
   <div class="container">
     <div class="row">
-      <div class="col-md-3">
+      <div class="col-md-4 col-xl-3">
         <div class="card bg-c-blue order-card">
           <div class="card-block">
             <a href="/admin-view-student">
@@ -88,11 +84,12 @@
             </a>
             <br>
             <h2 class="text-right"><i class="fas fa-eye f-left"></i></h2>
+
           </div>
         </div>  
       </div>
 
-      <div class="col-md-3">
+      <div class="col-md-4 col-xl-3">
         <div class="card bg-c-green order-card">
           <div class="card-block">
             <a href="/admin-add-student">
@@ -104,7 +101,7 @@
         </div>
       </div>
 
-      <div class="col-md-3">
+      <div class="col-md-4 col-xl-3">
         <div class="card bg-c-yellow order-card">
           <div class="card-block">
             <a href="/admin-approve-student">
@@ -116,7 +113,7 @@
         </div>
       </div>
 
-      <div class="col-md-3">
+      <div class="col-md-4 col-xl-3">
         <div class="card bg-c-pink order-card">
           <div class="card-block">
             <a href="/admin-view-student-fee">
@@ -128,6 +125,7 @@
         </div>
       </div>
     </div>
+    <br><br><br><br><br><br><br><br>
   </div>
 
   <script src="http://netdna.bootstrapcdn.com/bootstrap/4.0.0-beta/js/bootstrap.min.js"></script>
