--- a/templates/school/admin_teacher.html
+++ b/templates/school/admin_teacher.html
@@ -1,8 +1,10 @@
 {% extends 'school/adminbase.html' %}
 
+
+
 {% block content %}
-<!DOCTYPE html>
-<html lang="en">
+
+
 
 <head>
   <meta charset="utf-8">
@@ -11,10 +13,15 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
   <link href="http://netdna.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" rel="stylesheet">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
-  <style type="text/css">
+  <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet">
+  <script src="http://netdna.bootstrapcdn.com/bootstrap/4.0.0-beta/js/bootstrap.min.js"></script>
+  <style>
     a:link {
       text-decoration: none;
+    }
+
+    h6 {
+      color: white;
     }
 
     .order-card {
@@ -64,9 +71,10 @@
       float: right;
     }
   </style>
-  </head>
+</head>
+
 <body>
-   <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet">
+
   <div class="container">
     <div class="row">
       <div class="col-md-4 col-xl-3">
@@ -77,6 +85,7 @@
             </a>
             <br>
             <h2 class="text-right"><i class="fas fa-eye f-left"></i></h2>
+
           </div>
         </div>
       </div>
@@ -117,10 +126,12 @@
         </div>
       </div>
     </div>
+    <br><br><br><br><br><br><br><br>
   </div>
-    <script src="http://netdna.bootstrapcdn.com/bootstrap/4.0.0-beta/js/bootstrap.min.js"></script>
-  <script type="text/javascript">
 
-  </script>
+
+  
 </body>
+
+
 {% endblock content %}
