--- a/templates/school/navbar.html
+++ b/templates/school/navbar.html
@@ -11,53 +11,54 @@
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
 
   <style type="text/css">
-    .bs-example {
-      margin: 0px;
-
+    /* Custom styles for the navbar */
+    .navbar {
+      background-color: #0e0f0f; /* Blue background color */
     }
 
     .navbar-brand {
-      font-size: 20px;
-      font-family: sans-serif;
+      color: #fff !important; /* White color for the brand text */
+      font-weight: bold;
+    }
 
+    .navbar-toggler-icon {
+      color: #fff; /* White color for the toggler icon */
+    }
+
+    .navbar-nav .nav-link {
+      color: #fff !important; /* White color for the nav links */
+    }
+
+    .navbar-nav .nav-link:hover {
+      color: #e1280b !important; /* Darker blue color on hover */
+    }
+    .navbar-brand:hover {
+      color: #e1280b !important; /* Darker blue color on hover */
     }
   </style>
 </head>
 
 <body>
-
-
-
   <div class="bs-example">
-    <nav class="navbar navbar-expand-md bg-dark navbar-dark fixed-top">
-      <a href="/" class="navbar-brand">School Management</a>
+    <nav class="navbar navbar-expand-md  navbar-dark fixed-top">
+      <a href="/" class="navbar-brand"><i class="fa fa-university"></i> Scholario
+      </a>
       <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse">
         <span class="navbar-toggler-icon"></span>
       </button>
-
       <div class="collapse navbar-collapse justify-content-between" id="navbarCollapse">
         <div class="navbar-nav">
-          <a href="/" class="nav-item nav-link active">Home</a>
-          <a href="/adminclick" class="nav-item nav-link">Admin</a>
-          <a href="/teacherclick" class="nav-item nav-link">Teacher</a>
-          <a href="/studentclick" class="nav-item nav-link">Student</a>
-
-
+          <a href="/" class="nav-item nav-link active"><i class="fa fa-home"></i> Home</a>
+          <a href="/adminclick" class="nav-item nav-link"><i class="fa fa-user-circle"></i> Admin</a>
+          <a href="/teacherclick" class="nav-item nav-link"><i class="fa fa-user"></i> Teacher</a>
+          <a href="/studentclick" class="nav-item nav-link"><i class="fa fa-graduation-cap"></i> Student</a>
         </div>
-
         <div class="navbar-nav">
-          <a href="/aboutus" class="nav-item nav-link">About Us</a>
-          <a href="contactus" class="nav-item nav-link">Contact Us</a>
+          <a href="/aboutus" class="nav-item nav-link"><i class="fa fa-info-circle"></i> About Us</a>
+          <a href="contactus" class="nav-item nav-link"><i class="fa fa-envelope"></i> Contact Us</a>
         </div>
-
-
-
-
       </div>
     </nav>
   </div>
-
-
 </body>
-
 </html>
