--- a/templates/school/adminlogin.html
+++ b/templates/school/adminlogin.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 {% load widget_tweaks %}
+{% load static %}
 <html lang="en" dir="ltr">
 
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <title>School</title>
+  <title>Scholario</title>
 
 
   <style type="text/css">
@@ -53,7 +54,7 @@
 
 
 
-
+<link rel="shortcut icon" type="image/png" href="{% static 'images/favicon.png' %}" >
 </head>
 
 <body>
