--- a/templates/school/homebase.html
+++ b/templates/school/homebase.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
+{% load static %}
 <html lang="en" dir="ltr">
 
 <head>
   <meta charset="utf-8">
-  <title>School</title>
+  <title>Scholario</title>
   <style media="screen">
     .jumbotron {
       margin-top: 0px;
@@ -18,7 +19,7 @@
       margin: 0px;
     }
   </style>
-
+<link rel="shortcut icon" type="image/png" href="{% static 'images/favicon.png' %}" >
 </head>
 
 <body>
