--- a/templates/school/studentlogin.html
+++ b/templates/school/studentlogin.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 {% load widget_tweaks %}
+{% load static %}
 <html lang="en" dir="ltr">
 
 <head>
@@ -52,7 +53,7 @@
 
 
 
-
+<link rel="shortcut icon" type="image/png" href="{% static 'images/favicon.png' %}" >
 
 </head>
 
