--- a/templates/school/teacherbase.html
+++ b/templates/school/teacherbase.html
@@ -4,7 +4,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>School</title>
+  <title>Scholario</title>
   
   <style media="screen">
     a:link {
@@ -150,7 +150,7 @@
     }
   </style>
 
-
+<link rel="shortcut icon" type="image/png" href="{% static 'images/favicon.png' %}" >
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.1/css/all.min.css">
 
 
