--- a/templates/school/admin_add_student.html
+++ b/templates/school/admin_add_student.html
@@ -83,7 +83,7 @@
               {% render_field form2.fee class="form-control" placeholder="Fee" %}
             </div>
             <div class="form-group">
-              {% render_field form2.roll class="form-control" placeholder="Roll" %}
+              {% render_field form2.roll class="form-control" placeholder="Email" %}
             </div>
           </div>
         </div>
