--- a/templates/school/admin_dashboard_cards.html
+++ b/templates/school/admin_dashboard_cards.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
-
+  {% load static %}
 <head>
   <meta charset="utf-8">
 
-
+  <link rel="shortcut icon" type="image/png" href="{% static 'images/favicon.png' %}" >
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
   <link href="http://netdna.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" rel="stylesheet">
