--- a/templates/school/contactus.html
+++ b/templates/school/contactus.html
@@ -8,7 +8,7 @@
 
   <!-- Include Font Awesome for icons -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css">
-
+  <link rel="shortcut icon" type="image/png" href="{% static 'images/favicon.png' %}" >
   <style>
     /* Custom styles for the form */
     body {
