--- a/templates/school/contactussuccess.html
+++ b/templates/school/contactussuccess.html
@@ -9,7 +9,7 @@
 
   <!-- Include Font Awesome for icons -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css">
-
+  <link rel="shortcut icon" type="image/png" href="{% static 'images/favicon.png' %}" >
   <style media="screen">
     /* Custom styles for the jumbotron */
     .jumbotron {
