--- a/templates/school/navbar.html
+++ b/templates/school/navbar.html
@@ -4,12 +4,13 @@
 
 <head>
   <meta charset="utf-8">
+  <title>Scholario</title>
+  <link rel="shortcut icon" type="image/png" href="{% static 'images/favicon.png' %}" >
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
-
   <style type="text/css">
     /* Custom styles for the navbar */
     .navbar {
@@ -30,12 +31,13 @@
     }
 
     .navbar-nav .nav-link:hover {
-      color: #e1280b !important; /* Darker blue color on hover */
+      color: #0be10b !important; /* Darker blue color on hover */
     }
     .navbar-brand:hover {
-      color: #e1280b !important; /* Darker blue color on hover */
+      color: #69f10e !important; /* Darker blue color on hover */
     }
   </style>
+ 
 </head>
 
 <body>
