--- a/templates/school/student_wait_for_approval.html
+++ b/templates/school/student_wait_for_approval.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+{% load static %}
 <html lang="en" dir="ltr">
 
 <head>
@@ -8,7 +9,7 @@
 
   <!-- Include Bootstrap CSS -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-
+  <link rel="shortcut icon" type="image/png" href="{% static 'images/favicon.png' %}" >
   <!-- Include Font Awesome for icons -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css">
 
