--- a/templates/school/teacher_wait_for_approval.html
+++ b/templates/school/teacher_wait_for_approval.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+{% load static %}
 <html lang="en" dir="ltr">
 
 <head>
@@ -91,7 +92,7 @@
       text-transform: uppercase; color: #FF5733;
     }
   </style>
-
+<link rel="shortcut icon" type="image/png" href="{% static 'images/favicon.png' %}" >
 </head>
 
 <body>
