--- a/templates/school/teachersignup.html
+++ b/templates/school/teachersignup.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
 
 {% load widget_tweaks %}
+{% load static %}
 <html lang="en" dir="ltr">
 
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <title>School</title>
+  <title>Scholario</title>
   <style type="text/css">
     body {
       color: #aa082e;
@@ -47,7 +48,7 @@
       color: #fff;
     }
   </style>
-
+<link rel="shortcut icon" type="image/png" href="{% static 'images/favicon.png' %}" >
 </head>
 
 
